--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
           <ul class="list our-team-flex">
             <li class="card">
               <img
+                srcset="./images/img1@2x.jpg 2x"
                 src="./images/img1.jpg"
                 alt="Foto Mark Guerrero"
                 width="264"
@@ -183,6 +184,7 @@
             </li>
             <li class="card">
               <img
+                srcset="./images/img2@2x.jpg 2x"
                 src="./images/img2.jpg"
                 alt="Foto Tom Ford"
                 width="264"
@@ -225,6 +227,7 @@
             </li>
             <li class="card">
               <img
+                srcset="./images/img3@2x.jpg 2x"
                 src="./images/img3.jpg"
                 alt="Foto Camila Garcia"
                 width="264"
@@ -267,6 +270,7 @@
             </li>
             <li class="card">
               <img
+                srcset="./images/img4@2x.jpg 2x"
                 src="./images/img4.jpg"
                 alt="Foto Daniel Wilson"
                 width="264"
@@ -319,10 +323,17 @@
             <li class="portfolio-list-item">
               <div class="overlay-wrapper">
                 <img
-                  src="./images/port1.jpg"
+                  srcset="
+                    ./images/port1-m.jpg    288w,
+                    ./images/port1-t.jpg    356w,
+                    ./images/port1-d.jpg    360w,
+                    ./images/port1-m@2x.jpg 576w,
+                    ./images/port1-t@2x.jpg 712w,
+                    ./images/port1-d@2x.jpg 720w
+                  "
+                  sizes="(max-width: 767px) 288px, (min-width: 768px) 356px, (min-width: 1158px) 360px"
+                  src="./images/port1-m.jpg"
                   alt="Banking App"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -338,10 +349,17 @@
             <li class="portfolio-list-item">
               <div class="overlay-wrapper">
                 <img
-                  src="./images/port2.jpg"
+                  srcset="
+                    ./images/port2-m.jpg    288w,
+                    ./images/port2-t.jpg    356w,
+                    ./images/port2-d.jpg    360w,
+                    ./images/port2-m@2x.jpg 576w,
+                    ./images/port2-t@2x.jpg 712w,
+                    ./images/port2-d@2x.jpg 720w
+                  "
+                  sizes="(max-width: 767px) 288px, (min-width: 768px) 356px, (min-width: 1158px) 360px"
+                  src="./images/port2-m.jpg"
                   alt="Cashless Payment"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -357,10 +375,17 @@
             <li class="portfolio-list-item">
               <div class="overlay-wrapper">
                 <img
-                  src="./images/port3.jpg"
+                  srcset="
+                    ./images/port3-m.jpg    288w,
+                    ./images/port3-t.jpg    356w,
+                    ./images/port3-d.jpg    360w,
+                    ./images/port3-m@2x.jpg 576w,
+                    ./images/port3-t@2x.jpg 712w,
+                    ./images/port3-d@2x.jpg 720w
+                  "
+                  sizes="(max-width: 767px) 288px, (min-width: 768px) 356px, (min-width: 1158px) 360px"
+                  src="./images/port3-m.jpg"
                   alt="Meditation App"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -376,10 +401,17 @@
             <li class="portfolio-list-item">
               <div class="overlay-wrapper">
                 <img
-                  src="./images/port4.jpg"
+                  srcset="
+                    ./images/port4-m.jpg    288w,
+                    ./images/port4-t.jpg    356w,
+                    ./images/port4-d.jpg    360w,
+                    ./images/port4-m@2x.jpg 576w,
+                    ./images/port4-t@2x.jpg 712w,
+                    ./images/port4-d@2x.jpg 720w
+                  "
+                  sizes="(max-width: 767px) 288px, (min-width: 768px) 356px, (min-width: 1158px) 360px"
+                  src="./images/port4-m.jpg"
                   alt="Taxi Service"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -395,10 +427,17 @@
             <li class="portfolio-list-item">
               <div class="overlay-wrapper">
                 <img
-                  src="./images/port5.jpg"
+                  srcset="
+                    ./images/port5-m.jpg    288w,
+                    ./images/port5-t.jpg    356w,
+                    ./images/port5-d.jpg    360w,
+                    ./images/port5-m@2x.jpg 576w,
+                    ./images/port5-t@2x.jpg 712w,
+                    ./images/port5-d@2x.jpg 720w
+                  "
+                  sizes="(max-width: 767px) 288px, (min-width: 768px) 356px, (min-width: 1158px) 360px"
+                  src="./images/port5-m.jpg"
                   alt="Screen Illustration"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -414,10 +453,17 @@
             <li class="portfolio-list-item">
               <div class="overlay-wrapper">
                 <img
-                  src="./images/port6.jpg"
+                  srcset="
+                    ./images/port6-m.jpg    288w,
+                    ./images/port6-t.jpg    356w,
+                    ./images/port6-d.jpg    360w,
+                    ./images/port6-m@2x.jpg 576w,
+                    ./images/port6-t@2x.jpg 712w,
+                    ./images/port6-d@2x.jpg 720w
+                  "
+                  sizes="(max-width: 767px) 288px, (min-width: 768px) 356px, (min-width: 1158px) 360px"
+                  src="./images/port6-m.jpg"
                   alt="Online Courses"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -507,7 +553,7 @@
     </footer>
 
     <!--! Modal Window -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-modal-btn" type="button">
           <svg class="modal-close-button-icon" width="8" height="8">
