--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
         <address class="header-addres" id="cont">
           <ul class="list list-addres">
-            <li>
+            <li class="cont-info">
               <a
                 class="link addres-list addres-hover"
                 href="mailto:info@devstudio.com"
@@ -691,55 +691,56 @@
             </li>
           </ul>
         </nav>
-        <address class="addres-mobile-menu">
-          <ul class="list list-addres-mobile-menu">
-            <li>
-              <a
-                class="link addres-list-mobile-menu addres-hover"
-                href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+        <div class="contact-social-wrapper">
+          <address class="addres-mobile-menu">
+            <ul class="list list-addres-mobile-menu">
+              <li>
+                <a
+                  class="link addres-list-mobile-menu addres-hover"
+                  href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link addres-list-mobile-menu addres-hover addres-color"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="list social-list-mobile-menu">
+            <li class="social-icon">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a
-                class="link addres-list-mobile-menu addres-hover addres-color"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li class="social-icon">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icon">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icon">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-        <ul class="list social-list-mobile-menu">
-          <li class="social-icon">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-icon">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-icon">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-icon">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
+        </div>
     </div>
   </body>
 </html>
